--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <p>"Lorem Ipsum is simply dummy text of the <br>printing and typesetting industry. Lorem Ipsum"</p>
         <div class="big-button">
             <span>Leave me a message in the</apan>
-            <h2>programming.hero1@gmail.com</h2></a>
+            <h2>Programming.hero1@gmail.com</h2></a>
         </div>
     </div>
     <div class="footer">
